# AiTradingBot

./: .env.example  .gitignore  README.md  TRADING_CONDITIONS.md  demo.py  fake_data_sender.py  pyproject.toml  requirements.txt  run_pipeline.py  sample_curl_commands.sh  story.txt  todo.txt
app/: __init__.py  db.py  gnews_fetcher.py  ingest.py  llm_analyzer.py  main.py  market_data.py  models.py  rag.py  scheduler.py  signal_engine.py  state_manager.py  ticker_linker.py  utils.py  zerodha_executor.py
app/templates/: dashboard.html
data/: sample_data.py
tests/: __init__.py  conftest.py  test_pipeline.py  test_signal_engine.py  test_state_merge.py
